<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_library_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

  <android.support.design.widget.AppBarLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="@string/activity_library_create">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="right"
          android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/activity_library_create_done"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_check_disabled"/>

      </LinearLayout>

    </android.support.v7.widget.Toolbar>

  </android.support.design.widget.AppBarLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/spacing_large"
      android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/library_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <android.support.design.widget.TextInputEditText
          android:id="@+id/library_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/library_title_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/library_layout_package_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal">

      <android.support.design.widget.TextInputEditText
          android:id="@+id/library_package_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/library_package_name_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/library_layout_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal">

      <android.support.design.widget.TextInputEditText
          android:id="@+id/library_website"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/library_website_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/library_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"/>

  </LinearLayout>

</LinearLayout>